crates/rattler_conda_types/src/package/snapshots/rattler_conda_types__package__index__test__reconstruct_index_json.snap
---
source: crates/rattler_conda_types/src/package/index.rs
expression: "Index::from_package_directory(package_dir.path()).unwrap()"
---
name: zlib
version: 1.2.8
build: vc10_0
build_number: 0
arch: x86_64
platform: win
license: "zlib (http://zlib.net/zlib_license.html)"
license_family: Other
subdir: win-64

